# TestRepository

./: .gitignore  CMakeLists.txt  main.cpp  test.cpp  tets2.cpp
FR/include/: robot.h  robot_error.h
FR/x86/: libfairino.so.2.1.3
head/: test.h  test2.h
src/: test.cpp
